Criando id randomico para gravar notícia

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,7 +34,7 @@
             android:ellipsize="end"
             android:gravity="start"
             android:hint="@string/et_hint_título"
-            android:inputType="textAutoCorrect"
+            android:inputType="textCapSentences"
             android:maxLines="1"
             android:padding="@dimen/padding_médio"
             android:textColor="@color/nile_night"
@@ -52,7 +52,7 @@
             android:background="@color/white"
             android:gravity="start"
             android:hint="@string/et_hint_noticia"
-            android:inputType="textMultiLine"
+            android:inputType="textMultiLine|textCapSentences"
             android:padding="@dimen/padding_médio"
             android:textColor="@color/nile_night"
             android:textColorHint="@color/navy_teal"
@@ -88,7 +88,7 @@
             android:ellipsize="end"
             android:gravity="start"
             android:hint="@string/et_hint_autor"
-            android:inputType="textAutoCorrect"
+            android:inputType="textCapSentences"
             android:maxLines="1"
             android:padding="@dimen/padding_médio"
             android:textColor="@color/nile_night"
