--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="navy_teal">#4a6777</color>
     <color name="nile_night">#2b2c30</color>
+    <color name="dark_slate_gray">#2f4f4f</color>
     </resources>
