Deixando o visual mais bonito e código melhor

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:fillViewport="true">
 
     <LinearLayout xmlns:tools="http://schemas.android.com/tools"
@@ -18,91 +19,111 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="@dimen/margem_média"
-            android:text="@string/título_principal"
             android:fontFamily="cursive"
+            android:text="@string/título_principal"
             android:textColor="@color/white"
             android:textSize="@dimen/tv_título"
             android:textStyle="bold" />
 
-        <EditText
-            android:id="@+id/et_titulo"
+        <com.google.android.material.card.MaterialCardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/padding_médio"
-            android:layout_marginTop="@dimen/margem_grande"
-            android:layout_marginEnd="@dimen/padding_médio"
-            android:background="@color/white"
-            android:ellipsize="end"
-            android:gravity="start"
-            android:hint="@string/et_hint_título"
-            android:inputType="textCapSentences"
-            android:maxLines="1"
-            android:padding="@dimen/padding_médio"
-            android:textColor="@color/nile_night"
-            android:textColorHint="@color/navy_teal"
-            android:textSize="@dimen/et_título"
-            android:autofillHints="" />
+            android:layout_marginVertical="@dimen/margem_pequena"
+            android:layout_marginHorizontal="@dimen/margem_min"
+            android:backgroundTint="@color/nile_night"
+            app:cardCornerRadius="15dp"
+            app:strokeColor="@color/white"
+            app:strokeWidth="1dp">
 
-        <EditText
-            android:id="@+id/et_noticia"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/margem_notícia"
-            android:layout_marginStart="@dimen/padding_médio"
-            android:layout_marginTop="@dimen/margem_pequena"
-            android:layout_marginEnd="@dimen/padding_médio"
-            android:background="@color/white"
-            android:gravity="start"
-            android:hint="@string/et_hint_noticia"
-            android:inputType="textMultiLine|textCapSentences"
-            android:padding="@dimen/padding_médio"
-            android:textColor="@color/nile_night"
-            android:textColorHint="@color/navy_teal"
-            android:textSize="@dimen/et_título"
-            android:importantForAutofill="no" />
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" >
 
-        <EditText
-            android:id="@+id/et_data"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/padding_médio"
-            android:layout_marginTop="@dimen/margem_pequena"
-            android:layout_marginEnd="@dimen/padding_médio"
-            android:background="@color/white"
-            android:textStyle="bold"
-            android:text="@string/data"
-            android:gravity="start"
-            android:enabled="false"
-            android:padding="@dimen/padding_médio"
-            android:textColor="@color/nile_night"
-            android:textColorHint="@color/dark_slate_gray"
-            android:textSize="@dimen/et_título"
-            android:importantForAutofill="no" />
+                <androidx.appcompat.widget.AppCompatEditText
+                    android:id="@+id/et_titulo"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/padding_médio"
+                    android:layout_marginTop="@dimen/margem_média"
+                    android:layout_marginEnd="@dimen/padding_médio"
+                    android:autofillHints=""
+                    android:background="@drawable/rounded_corner"
+                    android:ellipsize="end"
+                    android:gravity="start"
+                    android:hint="@string/et_hint_título"
+                    android:inputType="textCapSentences"
+                    android:maxLines="1"
+                    android:padding="@dimen/padding_médio"
+                    android:textColor="@color/nile_night"
+                    android:textColorHint="@color/navy_teal"
+                    android:textSize="@dimen/et_título" />
 
-        <EditText
-            android:id="@+id/et_autor"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/padding_médio"
-            android:layout_marginTop="@dimen/margem_pequena"
-            android:layout_marginEnd="@dimen/padding_médio"
-            android:background="@color/white"
-            android:ellipsize="end"
-            android:gravity="start"
-            android:hint="@string/et_hint_autor"
-            android:inputType="textCapSentences"
-            android:maxLines="1"
-            android:padding="@dimen/padding_médio"
-            android:textColor="@color/nile_night"
-            android:textColorHint="@color/navy_teal"
-            android:textSize="@dimen/et_título"
-            android:autofillHints="" />
+                <androidx.appcompat.widget.AppCompatEditText
+                    android:id="@+id/et_noticia"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/margem_notícia"
+                    android:layout_marginStart="@dimen/padding_médio"
+                    android:layout_marginTop="@dimen/margem_pequena"
+                    android:layout_marginEnd="@dimen/padding_médio"
+                    android:background="@drawable/rounded_corner_main"
+                    android:gravity="start"
+                    android:hint="@string/et_hint_noticia"
+                    android:importantForAutofill="no"
+                    android:inputType="textMultiLine|textCapSentences"
+                    android:padding="@dimen/padding_médio"
+                    android:textColor="@color/nile_night"
+                    android:textColorHint="@color/navy_teal"
+                    android:textSize="@dimen/et_título" />
 
-        <Button
+                <androidx.appcompat.widget.AppCompatEditText
+                    android:id="@+id/et_data"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/padding_médio"
+                    android:layout_marginTop="@dimen/margem_pequena"
+                    android:layout_marginEnd="@dimen/padding_médio"
+                    android:background="@drawable/rounded_corner"
+                    android:enabled="false"
+                    android:gravity="start"
+                    android:importantForAutofill="no"
+                    android:padding="@dimen/padding_médio"
+                    android:text="@string/data"
+                    android:textColor="@color/nile_night"
+                    android:textColorHint="@color/dark_slate_gray"
+                    android:textSize="@dimen/et_título"
+                    android:textStyle="bold" />
+
+                <androidx.appcompat.widget.AppCompatEditText
+                    android:id="@+id/et_autor"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/padding_médio"
+                    android:layout_marginTop="@dimen/margem_pequena"
+                    android:layout_marginEnd="@dimen/padding_médio"
+                    android:layout_marginBottom="@dimen/margem_pequena"
+                    android:autofillHints=""
+                    android:background="@drawable/rounded_corner"
+                    android:ellipsize="end"
+                    android:gravity="start"
+                    android:hint="@string/et_hint_autor"
+                    android:inputType="textCapSentences"
+                    android:maxLines="1"
+                    android:padding="@dimen/padding_médio"
+                    android:textColor="@color/nile_night"
+                    android:textColorHint="@color/navy_teal"
+                    android:textSize="@dimen/et_título" />
+            </LinearLayout>
+
+        </com.google.android.material.card.MaterialCardView>
+
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_publicar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_margin="@dimen/margem_média"
+            android:layout_margin="@dimen/margem_pequena"
+            android:background="@drawable/rounded_corner"
             android:backgroundTint="@color/nile_night"
             android:padding="@dimen/padding_médio"
             android:text="@string/btn_publicar"
