--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:fillViewport="true">
 
     <LinearLayout xmlns:tools="http://schemas.android.com/tools"
@@ -19,26 +19,28 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="@dimen/margem_média"
+            android:layout_marginBottom="@dimen/_10sdp"
             android:fontFamily="cursive"
+            android:gravity="center_horizontal"
             android:text="@string/título_principal"
             android:textColor="@color/white"
-            android:textSize="@dimen/tv_título"
+            android:textSize="@dimen/_35sdp"
             android:textStyle="bold" />
 
         <com.google.android.material.card.MaterialCardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginVertical="@dimen/margem_pequena"
             android:layout_marginHorizontal="@dimen/margem_min"
+            android:layout_marginVertical="@dimen/margem_pequena"
             android:backgroundTint="@color/nile_night"
             app:cardCornerRadius="15dp"
             app:strokeColor="@color/white"
             app:strokeWidth="1dp">
 
             <LinearLayout
-                android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" >
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
                 <androidx.appcompat.widget.AppCompatEditText
                     android:id="@+id/et_titulo"
@@ -101,7 +103,7 @@
                     android:layout_marginStart="@dimen/padding_médio"
                     android:layout_marginTop="@dimen/margem_pequena"
                     android:layout_marginEnd="@dimen/padding_médio"
-                    android:layout_marginBottom="@dimen/margem_pequena"
+                    android:layout_marginBottom="@dimen/margem_média"
                     android:autofillHints=""
                     android:background="@drawable/rounded_corner"
                     android:ellipsize="end"
@@ -114,18 +116,18 @@
                     android:textColorHint="@color/navy_teal"
                     android:textSize="@dimen/et_título" />
             </LinearLayout>
-
         </com.google.android.material.card.MaterialCardView>
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_publicar"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="@dimen/margem_pequena"
             android:background="@drawable/rounded_corner"
             android:backgroundTint="@color/nile_night"
-            android:padding="@dimen/padding_médio"
+            android:paddingHorizontal="@dimen/_30sdp"
+            android:paddingVertical="@dimen/_15sdp"
             android:text="@string/btn_publicar"
             android:textAllCaps="false"
             android:textColor="@color/white"
